17-Jan-2013 Changed the Opus definition file schema so that package <version> elements can contain an optional Boolean 'Default' attribute, which indicates a default version of that package. If there are multiple versions of that package, this is chosen. Only one default version may be set per package. The default version in definition files can be overridden on the command line with the -<packagename>.version=<versionnumber> action.

17-Jan-2013 Added Opus.Core.State.InvokedActions returning an array of IActions that were invoked (can be multiple instances). Added Opus.Core.ActionManager.FindInvokedActionsByType to identify invoked actions of a specific type.

16-Jan-2013 Package hashing now includes the #defines passed to the compiler.

15-Jan-2013 A null tool type cannot be passed to the constructor of Opus.Core.ModuleToolAssignmentAttribute.

15-Jan-2013 Opus.Core.Exception no longer has a constructor taking a boolean to indicate a stack trace is printed.

15-Jan-2013 Opus.Core.Log now copes with unescaped braces in the format string passed. Previously this would result in an exception thrown, but could be caused by C code output from compiler warnings/errors.

09-Jan-2013 Opus.Core.IAction now also inherits from System.ICloneable.

04-Jan-2013 Opus.Core.IToolEnvironmentVariables.Variables now takes a BaseTarget rather than a Target.

04-Jan-2013 C.ThirdpartyModules now have a C.INullOpTool assigned to them, in order for Targets to be fully qualified with a toolset. This is useful because Thirdparty libraries must have been built with a toolset, so should be identifiable.
            Fetching an instance of a Target now requires a non-null Opus.Core.IToolset instance.

03-Jan-2013 Opus.Core.IToolEnvironmentPaths has been removed. Use IToolEnvironmentVariables instead.

02-Jan-2013 Opus.Core.ITool.Executable now takes an Opus.Core.BaseTarget instead of a Target.
