@@ -89,6 +89,7 @@
     <Compile Include="Actions\SetBuilderNameAction.cs" />
     <Compile Include="Actions\SetBuildRootAction.cs" />
     <Compile Include="Actions\SetConfigurationsAction.cs" />
+    <Compile Include="Actions\SetDefaultPackageVersionAction.cs" />
     <Compile Include="Actions\SetDefineAction.cs" />
     <Compile Include="Actions\SetDependentAction.cs" />
     <Compile Include="Actions\SetJobCountAction.cs" />
